# soft-library

./: .env  LICENSE  README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/db/: models.py
backend/src/repos/: book_rep.py
backend/src/schemas/: author.py  book_schemas.py
backend/src/views/: book.py
